== Changelog ==

= 1.6.8 - xx-xx-2020 =
* Tweak - Add trigger `everest_forms_loaded` to notify plugins that the core was loaded.
* Tweak - Modify duplicated action hook `everest_forms_general_settings` to `everest_forms_inline_general_settings` for builder general settings.

= 1.6.7 - 17-05-2020 =
* Feature - Added a new Pro field Range Slider.
* Fix - JS error while removing list from choice field.
* Tweak - Add support for next max value of row ID.

= 1.6.6.1 - 10-05-2020 =
* Fix - Sanitization of CSV exported field values.
* Fix - Conflict within WooCommerce checkout page.
* Fix - Flatpickr Calendar does not open on Android Chrome.
* Tweak - Updated selectWoo JS library to v1.6.0.
* Tweak - Updated flatpickr JS library to v4.6.3.

= 1.6.6 - 01-05-2020 =
* Fix - Log file deletion.
* Fix - Field Options getting freezed for the first field.
* Fix - Perfect Scrollbar library updated to fix RTL issue.
* Fix - Undefined PHP notice thrown if confirmation email didn't match.
* Fix - False-positive required message displayed upon email validation.
* Enhancement - Email attachment workflow.
* Enhancement - Added enhanced select feature to the Dropdown field.
* Enhancement - Added option to disable certain dates in the Date/Time field.

= 1.6.5 - 10-04-2020 =
* Fix - Shortcode design issue in list table.
* Fix - Form block deprecated notices in console.
* Fix - Selective html tag support in field label.
* Fix - Placeholder live update broken for fields.
* Fix - Set the default threshold received from reCAPTCHA.
* Fix - Empty form fields within form throwing PHP warnings.
* Fix - Placeholder components design issue with our form block.
* Fix - Image and file not being submitted with enable AJAX form submission.
* Tweak - RTL design issue for font-weight.
* Tweak - Google reCAPTCHA v3 threshhold default to `0.5`.
* Tweak - Custom Captcha field now shown as part of pro fields.
* Tweak - Prefill field value so it can be used to modify data.