@@ -844,7 +844,7 @@ abstract class EVF_Form_Fields {
 			 * Default value.
 			 */
 			case 'default_value':
-				$value   = ! empty( $field['default_value'] ) ? esc_attr( $field['default_value'] ) : '';
+				$value   = ! empty( $field['default_value'] ) || ( isset( $field['default_value'] ) && '0' === (string) $field['default_value'] ) ? esc_attr( $field['default_value'] ) : '';
 				$tooltip = esc_html__( 'Enter text for the default form field value.', 'everest-forms' );
 				$toggle  = '';
 				$output  = $this->field_element(
@@ -909,7 +909,7 @@ abstract class EVF_Form_Fields {
 			 * Placeholder.
 			 */
 			case 'placeholder':
-				$value   = ! empty( $field['placeholder'] ) ? esc_attr( $field['placeholder'] ) : '';
+				$value   = ! empty( $field['placeholder'] ) || ( isset( $field['placeholder'] ) && '0' === (string) $field['placeholder'] ) ? esc_attr( $field['placeholder'] ) : '';
 				$tooltip = esc_html__( 'Enter text for the form field placeholder.', 'everest-forms' );
 				$output  = $this->field_element(
 					'label',
