@@ -1,6 +1,7 @@
 == Changelog ==
 
 = 1.6.8 - xx-xx-2020 =
+* Fix - The default value & placeholder value 0 (zero) does not display on the frontend.
 * Tweak - Add trigger `everest_forms_loaded` to notify plugins that the core was loaded.
 * Tweak - Modify duplicated action hook `everest_forms_general_settings` to `everest_forms_inline_general_settings` for builder general settings.
 
